# metorial-platform

./: .gitignore  .gitmodules  AUTHORS  LICENSE  README.md  _package.json  go.work  go.work.sum  package.json  self-hosting.md  turbo.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build-api.yml  build-deno-runner.yml  build-engine.yml  build-frontend.yml  legal.yml  test.yml
backend/db/: package.json
clients/metorial-dashboard/: package.json  tsconfig.json
deployment/compose/: engine-minicluster-core.docker-compose.yml  engine-minicluster-runner.docker-compose.yml  engine-minicluster-tailscale.docker-compose.yml  engine-minicluster.docker-compose.yml  metorial.docker-compose.yml
deployment/dockerfiles/: api.Dockerfile  deno-runner.Dockerfile  engine-launcher.Dockerfile  engine-manager.Dockerfile  engine-remote.Dockerfile  engine-runner.Dockerfile  engine-unified.Dockerfile  frontend.Dockerfile
deployment/scripts/: setupUntrustedNet.sh  startMinicluster.sh  startMiniclusterCore.sh  startMiniclusterRunner.sh
deployment/skeleton/: entrypoint-api-services.sh  migrate.ts  package.json
examples/python-openai/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/typescript-ai-sdk/: README.md  package.json
examples/typescript-anthropic/: README.md  package.json
examples/typescript-openai/: README.md  package.json
scripts/dev-tools/: .gitignore  dev-tools.sh  package.json  services.docker-compose.yml
scripts/generator/: package.json
self-hosting/: .gitignore  .server_pids  docker-compose.yml  run.sh
(+1971 files in other folders)
